k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: library-app-service
spec:
  selector:
    app: library-app
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
